[package]
name = "kfs"
version = "0.1.0"
edition = "2024"

[dependencies]
volatile = "0.2.6"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.5.2"

[profile.dev]
panic = "abort"

[profile.release]
opt-level = "z"
panic = "abort"

[lib]
path = "src/rust/lib.rs"
crate-type = ["staticlib"]
test = false
doctest = false
bench = false
